--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_LOCAL_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
       VXLAN_ID: 43
-      VXLAN_IP_NETWORK: 172.16.1
+      VXLAN_IP_NETWOR: 172.16.1
     webhook:
       image:
         repository: ghcr.io/angelnu/gateway-admision-controller
@@ -69,14 +69,20 @@ spec:
           value: wireguard
         - name: VPN_INTERFACE
           value: wg0
+        - name: SERVER_HOSTNAMES
+          value: ${SECRET_VPN_GATEWAY_HOSTNAMES}
+        - name: WIREGUARD_PRIVATE_KEY
+          value: ${SECRET_VPN_GATEWAY_KEY}
         - name: FIREWALL
           value: "off"
         - name: DOT
           value: "off"
-        - name: WIREGUARD_PRIVATE_KEY
-          value: ${SECRET_VPN_GATEWAY_KEY}
-        - name: SERVER_HOSTNAMES
-          value: ${SECRET_VPN_GATEWAY_HOSTNAMES}
+        - name: HEALTH_TARGET_ADDRESS
+          value: "1.1.1.1"
+        - name: HEALTH_VPN_DURATION_INITIAL
+          value: 30s
+        - name: TZ
+          value: ${TIMEZONE}
         securityContext:
           capabilities:
             add:
