--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
         port: ${SECRET_VPN_BT_FORWARD_PORT}
     settings:
       NOT_ROUTED_TO_GATEWAY_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
-      VPN_INTERFACE: wg0
+      VPN_INTERFACE: tun0
       VPN_TRAFFIC_PORT: ${SECRET_VPN_GATEWAY_PORT}
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_LOCAL_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
@@ -66,13 +66,17 @@ spec:
         - name: VPN_SERVICE_PROVIDER
           value: ${SECRET_VPN_GATEWAY_PROVIDER}
         - name: VPN_TYPE
-          value: wireguard
+          value: openvpn
         - name: VPN_INTERFACE
-          value: wg0
-        - name: SERVER_HOSTNAMES
-          value: ${SECRET_VPN_GATEWAY_HOSTNAMES}
-        - name: WIREGUARD_PRIVATE_KEY
-          value: ${SECRET_VPN_GATEWAY_KEY}
+          value: tun0
+        #- name: SERVER_HOSTNAMES
+          #value: ${SECRET_VPN_GATEWAY_HOSTNAMES}
+        #- name: WIREGUARD_PRIVATE_KEY
+          #value: ${SECRET_VPN_GATEWAY_KEY}
+        - name: OPENVPN_USER
+          value: ${SECRET_VPN_GATEWAY_USER}
+        - name: OPENVPN_PASSWORD
+          value: ${SECRET_VPN_GATEWAY_PASSWORD}
         - name: FIREWALL
           value: "off"
         - name: DOT
