--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_LOCAL_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
       VXLAN_ID: 43
-      VXLAN_IP_NETWORK: 172.16.1
+      VXLAN_IP_NETWOR: 172.16.1
     webhook:
       image:
         repository: ghcr.io/angelnu/gateway-admision-controller
@@ -69,13 +69,14 @@ spec:
           value: openvpn
         - name: VPN_INTERFACE
           value: tun0
+        #- name: SERVER_HOSTNAMES
+          #value: ${SECRET_VPN_GATEWAY_HOSTNAMES}
+        #- name: WIREGUARD_PRIVATE_KEY
+          #value: ${SECRET_VPN_GATEWAY_KEY}
         - name: OPENVPN_USER
           value: ${SECRET_VPN_GATEWAY_USER}
         - name: OPENVPN_PASSWORD
           value: ${SECRET_VPN_GATEWAY_PASSWORD}
-        # BUG: https://github.com/qdm12/gluetun/issues/1599
-        #- name: SERVER_COUNTRIES
-          #value: ${SECRET_VPN_GATEWAY_COUNTRIES}
         - name: FIREWALL
           value: "off"
         - name: DOT
