Try fixing healthcheck

--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -77,6 +77,8 @@ spec:
           value: "off"
         - name: DOT
           value: "off"
+        - name: DNS_PLAINTEXT_ADDRESS
+          value: "1.1.1.1"
         - name: HEALTH_TARGET_ADDRESS
           value: "1.1.1.1"
         - name: HEALTH_VPN_DURATION_INITIAL
