--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
         port: ${SECRET_VPN_BT_FORWARD_PORT}
     settings:
       NOT_ROUTED_TO_GATEWAY_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
-      VPN_INTERFACE: tunl0
+      VPN_INTERFACE: tun0
       VPN_TRAFFIC_PORT: ${SECRET_VPN_GATEWAY_PORT}
       VPN_BLOCK_OTHER_TRAFFIC: true
       VPN_LOCAL_CIDRS: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
@@ -68,9 +68,11 @@ spec:
         - name: VPN_TYPE
           value: openvpn
         - name: VPN_INTERFACE
-          value: tunl0
+          value: tun0
         - name: OPENVPN_VERBOSITY
           value: 3
+        - name: LOG_LEVEL
+          value: debug
         - name: OPENVPN_USER
           value: ${SECRET_VPN_GATEWAY_USER}
         - name: OPENVPN_PASSWORD
@@ -79,10 +81,6 @@ spec:
           value: off
         - name: DOT
           value: off
-        - name: FIREWALL_OUTBOUND_SUBNETS
-          value: 10.0.0.0/8
-        - name: DNS_PLAINTEXT_ADDRESS
-          value: 172.24.0.10
         - name: HEALTH_TARGET_ADDRESS
           value: 1.1.1.1
         - name: HEALTH_VPN_DURATION_INITIAL
