--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -55,6 +55,8 @@ spec:
       gatewayLabel: setVPNGateway
       gatewayAnnotation: setVPNGateway
     addons:
+      netshoot:
+        enabled: true
       vpn:
         enabled: true
         type: gluetun
@@ -75,8 +77,10 @@ spec:
           value: ${SECRET_VPN_GATEWAY_PASSWORD}
         #- name: SERVER_COUNTRIES
           #value: ${SECRET_VPN_GATEWAY_COUNTRIES}
-        - name: FIREWALL
-          value: off
+        - name: LOG_LEVEL
+          value: debug
+        - name: FIREWALL_OUTBOUND_SUBNETS
+          value: ${NETWORK_CIDR_K8S_CLUSTER} ${NETWORK_CIDR_K8S_SERVICE} ${NETWORK_CIDR_K8S_SERVICE_EXTERNAL} ${NETWORK_CIDR_HOST}
         - name: DOT
           value: off
         - name: HEALTH_TARGET_ADDRESS
