--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -80,7 +80,11 @@ spec:
         - name: LOG_LEVEL
           value: debug
         - name: FIREWALL_OUTBOUND_SUBNETS
-          value: ${NETWORK_CIDR_K8S_CLUSTER},${NETWORK_CIDR_K8S_SERVICE},${NETWORK_CIDR_K8S_SERVICE_EXTERNAL},${NETWORK_CIDR_HOST}
+          value: ${NETWORK_CIDR_K8S_SERVICE}
+        - name: DNS_KEEP_NAMESERVER
+          value: off
+        - name: DNS_ADDRESS
+          value: 172.24.0.10
         - name: DOT
           value: off
         - name: HEALTH_TARGET_ADDRESS
