--- a/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
+++ b/cluster-home/operations/vpn/vpn-gateway/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
         - name: OPENVPN_PASSWORD
           value: ${SECRET_VPN_GATEWAY_PASSWORD}
         - name: FIREWALL_OUTBOUND_SUBNETS
-          value: ${NETWORK_CIDR_K8S_CLUSTER}
+          value: ${NETWORK_CIDR_K8S_CLUSTER},${NETWORK_CIDR_K8S_SERVICE},${NETWORK_CIDR_K8S_SERVICE_EXTERNAL},${NETWORK_CIDR_HOST}
         - name: VPN_PORT_FORWARDING_LISTENING_PORT
           value: ${SECRET_VPN_BT_FORWARD_PORT}
         - name: DOT
