--- a/cluster-home/operations/media/prowlarr/helmrelease.yaml
+++ b/cluster-home/operations/media/prowlarr/helmrelease.yaml
@@ -80,6 +80,9 @@ spec:
           paths:
           - path: /
             pathType: Prefix
+            service:
+              name: main
+              port: http
         tls:
         - hosts:
           - prowlarr.buvis.net
