--- a/cluster-home/operations/media/prowlarr/helmrelease.yaml
+++ b/cluster-home/operations/media/prowlarr/helmrelease.yaml
@@ -51,8 +51,9 @@ spec:
               PROWLARR__PORT: &port 9696
               PROWLARR__LOG_LEVEL: info
               PROWLARR__ANALYTICS_ENABLED: "False"
-    podAnnotations:
-      setVPNGateway: "true"
+    pod:
+      annotations:
+        setVPNGateway: "true"
     persistence:
       config:
         enabled: true
