Fix mount path definition

--- a/cluster-home/operations/network/blocky/helmrelease.yaml
+++ b/cluster-home/operations/network/blocky/helmrelease.yaml
@@ -99,7 +99,8 @@ spec:
         type: configMap
         name: blocky-config
         subPath: config.yml
-        mountPath: /app/config.yml
+        globalMounts:
+        - path: /app/config.yml
         readOnly: true
     configMaps:
       config:
