Create bucket for thanos

--- a/cluster-home/operations/storage/minio/helmrelease.yaml
+++ b/cluster-home/operations/storage/minio/helmrelease.yaml
@@ -60,3 +60,9 @@ spec:
     metrics:
       serviceMonitor:
         enabled: true
+    buckets:
+      - name: thanos
+        policy: none
+        purge: true
+        versioning: false
+        objectlocking: false
