--- a/cluster-home/operations/storage/minio/helmrelease.yaml
+++ b/cluster-home/operations/storage/minio/helmrelease.yaml
@@ -35,20 +35,16 @@ spec:
       enabled: true
       existingClaim: minio-buckets
     ingress:
-      main:
-        enabled: true
-        annotations:
-          kubernetes.io/ingress.class: nginx
-          cert-manager.io/cluster-issuer: letsencrypt-production
-        hosts:
-        - host: minio.buvis.net
-          paths:
-          - path: /
-            pathType: Prefix
-        tls:
-        - hosts:
+      enabled: true
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        cert-manager.io/cluster-issuer: letsencrypt-production
+      hosts:
+      - minio.buvis.net
+      tls:
+      - secretName: minio-cert
+          hosts:
           - minio.buvis.net
-          secretName: minio-crt
     consoleIngress:
       enabled: false
     resources:
