Point thanos to minio's bucket

--- a/cluster-home/operations/storage/minio/helmrelease.yaml
+++ b/cluster-home/operations/storage/minio/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
         enabled: true
     buckets:
       - name: thanos
-        policy: none
+        policy: public
         purge: true
         versioning: false
         objectlocking: false
