--- a/cluster-home/operations/monitoring/thanos/helmrelease.yaml
+++ b/cluster-home/operations/monitoring/thanos/helmrelease.yaml
@@ -67,3 +67,21 @@ spec:
       enabled: true
       serviceMonitor:
         enabled: true
+    objstore:
+      type: S3
+      config:
+        bucket: thanos
+        endpoint: minio.storage.svc:9000
+        access_key: thanos
+        secret_key: ${SECRET_MINIO_THANOS_SECRET_KEY}
+        region: ""
+        insecure: true
+        signature_version2: false
+        put_user_metadata: {}
+        http_config:
+          idle_conn_timeout: 0s
+          response_header_timeout: 0s
+          insecure_skip_verify: false
+        trace:
+          enable: false
+        part_size: 0
