--- a/cluster-home/operations/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/cluster-home/operations/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -163,6 +163,16 @@ spec:
           image: quay.io/thanos/thanos:v0.32.5
           # renovate: datasource=docker depName=quay.io/thanos/thanos
           version: v0.29.0
+          objectStorageConfig:
+            secret:
+              type: S3
+              config:
+                bucket: thanos
+                endpoint: minio.storage.svc:9000
+                access_key: thanos
+                secret_key: ${SECRET_MINIO_THANOS_SECRET_KEY}
+                region: ""
+                insecure: true
         podAntiAffinity: hard
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
