Allow editor access to /config

--- a/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
+++ b/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
@@ -36,6 +36,12 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    defaultPodOptions:
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
+        fsGroupChangePolicy: OnRootMismatch
     controllers:
       main:
         containers:
