--- a/cluster-home/operations/gtd/monica/helmrelease.yaml
+++ b/cluster-home/operations/gtd/monica/helmrelease.yaml
@@ -36,21 +36,24 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    image:
-      repository: monica
-      tag: 4.0.0-apache
-    env:
-      APP_ENV: production
-      APP_KEY: ${SECRET_MONICA_APP_KEY}
-      APP_URL: https://crm.buvis.net
-      APP_TRUSTED_PROXIES: "*"
-      DB_DATABASE: monica
-      DB_HOST: monica-db-mariadb
-      DB_PASSWORD: ${SECRET_MONICA_DB_PASSWORD}
-      DB_USERNAME: monica
-      DEFAULT_MAX_UPLOAD_SIZE: 2000
-      DEFAULT_MAX_STORAGE_SIZE: 2048
-      enabled: false
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: monica
+              tag: 4.0.0-apache
+            env:
+              APP_ENV: production
+              APP_KEY: ${SECRET_MONICA_APP_KEY}
+              APP_URL: https://crm.buvis.net
+              APP_TRUSTED_PROXIES: "*"
+              DB_DATABASE: monica
+              DB_HOST: monica-db-mariadb
+              DB_PASSWORD: ${SECRET_MONICA_DB_PASSWORD}
+              DB_USERNAME: monica
+              DEFAULT_MAX_UPLOAD_SIZE: 2000
+              DEFAULT_MAX_STORAGE_SIZE: 2048
     service:
       main:
         enabled: true
@@ -64,7 +67,8 @@ spec:
       storage:
         enabled: true
         existingClaim: monica-storage
-        mountPath: /var/www/html/storage
+        globalMounts:
+        - path: /var/www/html/storage
     ingress:
       main:
         enabled: true
@@ -80,6 +84,9 @@ spec:
           paths:
           - path: /
             pathType: Prefix
+            service:
+              name: main
+              port: http
         tls:
         - hosts:
           - crm.buvis.net
