Fix serviceMonitor for speedtest-exporter

--- a/cluster-home/operations/monitoring/speedtest-exporter/helmrelease.yaml
+++ b/cluster-home/operations/monitoring/speedtest-exporter/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
     serviceMonitor:
       main:
         enabled: true
-        serviceName: main
+        serviceName: speedtest-exporter
         endpoints:
         - port: http
           scheme: http
