--- a/cluster-home/operations/media/qbittorrent/helmrelease.yaml
+++ b/cluster-home/operations/media/qbittorrent/helmrelease.yaml
@@ -82,6 +82,7 @@ spec:
             port: 8080
       bittorrent:
         enabled: true
+        controller: main
         type: LoadBalancer
         externalIPs:
         - ${SVC_IP_BITTORRENT}
