Fix typo in port name

--- a/cluster-home/operations/media/lidarr/helmrelease.yaml
+++ b/cluster-home/operations/media/lidarr/helmrelease.yaml
@@ -112,7 +112,7 @@ spec:
             pathType: Prefix
             service:
               name: main
-              port: httm
+              port: http
         tls:
         - hosts:
           - lidarr.buvis.net
