Fix service definition

--- a/cluster-home/operations/media/sonarr/helmrelease.yaml
+++ b/cluster-home/operations/media/sonarr/helmrelease.yaml
@@ -94,6 +94,8 @@ spec:
           http:
             port: 8989
       exporter:
+        enabled: true
+        controller: main
         ports:
           http:
             port: 7373
