Add fixed IP for jellyseerr service

--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -20,6 +20,7 @@ data:
   SVC_IP_HASS: "10.11.0.42"
   SVC_IP_INGRESS: "10.11.0.80"
   SVC_IP_JELLYFIN: "10.11.0.104"
+  SVC_IP_JELLYSEERR: "10.11.0.106"
   SVC_IP_KOPIA: "10.11.0.44"
   SVC_IP_MOPIDY: "10.11.0.180"
   SVC_IP_SNAPSERVER: "10.11.0.190"
