--- a/cluster-home/operations/media/jellyseerr/helmrelease.yaml
+++ b/cluster-home/operations/media/jellyseerr/helmrelease.yaml
@@ -69,6 +69,10 @@ spec:
         - path: /app/config
     service:
       main:
+        type: LoadBalancer
+        externalIPs:
+        - ${SVC_IP_JELLYSEERR}
+        externalTrafficPolicy: Local
         ports:
           http:
             port: 5055
