--- a/cluster-home/operations/media/tdarr/helmrelease.yaml
+++ b/cluster-home/operations/media/tdarr/helmrelease.yaml
@@ -74,7 +74,9 @@ spec:
         existingClaim: nas-media
       shared:
         enabled: true
-        existingClaim: tdarr-cache
+        existingClaim: nas-pv-media
+        globalMounts:
+        - subPath: tdarr/cache
     service:
       main:
         ports:
