--- a/cluster-home/operations/media/pv.yaml
+++ b/cluster-home/operations/media/pv.yaml
@@ -34,3 +34,39 @@ spec:
   resources:
     requests:
       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nas-pv-media
+spec:
+  storageClassName: nas-pv-media
+  capacity:
+    storage: 100Gi
+  accessModes:
+  - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: ${NFS_SERVER_IP}
+    path: ${NFS_SERVER_PATH_PV}/media
+  mountOptions:
+  - nfsvers=4
+  - tcp
+  - intr
+  - hard
+  - noatime
+  - nodiratime
+  - nolock
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nas-pv-media
+  namespace: media
+spec:
+  storageClassName: nas-pv-media
+  accessModes:
+  - ReadWriteMany
+  resources:
+    requests:
+      storage: 100Gi
