--- a/cluster-home/operations/gtd/pv.yaml
+++ b/cluster-home/operations/gtd/pv.yaml
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NFS_SERVER_IP}
-    path: ${NFS_SERVER_PATH_PV}/gtd
+    path: ${NFS_SERVER_PATH_PV}
   mountOptions:
   - nfsvers=4
   - tcp
