--- a/cluster-home/operations/media/pv.yaml
+++ b/cluster-home/operations/media/pv.yaml
@@ -48,7 +48,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NFS_SERVER_IP}
-    path: ${NFS_SERVER_PATH_PV}
+    path: ${NFS_SERVER_PATH_PV}/media
   mountOptions:
   - nfsvers=4
   - tcp
