--- a/cluster-home/operations/radio/pv.yaml
+++ b/cluster-home/operations/radio/pv.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nas-music
+  name: nas-media-music-radio
 spec:
-  storageClassName: nas-music
+  storageClassName: nas-media-music-radio
   capacity:
     storage: 1Mi
   accessModes:
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nas-music
+  name: nas-media-music-radio
   namespace: radio
 spec:
-  storageClassName: nas-music
+  storageClassName: nas-media-music-radio
   accessModes:
   - ReadWriteMany
   resources:
