--- a/cluster-home/operations/media/bazarr/helmrelease.yaml
+++ b/cluster-home/operations/media/bazarr/helmrelease.yaml
@@ -68,9 +68,8 @@ spec:
         enabled: true
         existingClaim: bazarr-config
       media:
-        existingClaim: nas-media
-        globalMounts:
-        - path: /media
+        enabled: true
+        existingClaim: nas-media-videos
     service:
       main:
         ports:
