--- a/cluster-home/operations/media/lidarr/helmrelease.yaml
+++ b/cluster-home/operations/media/lidarr/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
         existingClaim: lidarr-config
       media:
         enabled: true
-        existingClaim: nas-media
+        existingClaim: nas-media-music
     service:
       main:
         ports:
