--- a/cluster-home/operations/media/sonarr/helmrelease.yaml
+++ b/cluster-home/operations/media/sonarr/helmrelease.yaml
@@ -87,7 +87,7 @@ spec:
         existingClaim: sonarr-config
       media:
         enabled: true
-        existingClaim: nas-media
+        existingClaim: nas-media-videos
     service:
       main:
         ports:
