--- a/cluster-home/operations/storage/kopia/jobs/kopia-maintenance.yaml
+++ b/cluster-home/operations/storage/kopia/jobs/kopia-maintenance.yaml
@@ -60,4 +60,4 @@ spec:
           - name: snapshots
             nfs:
               server: ${NFS_SERVER_IP}
-              path: ${NFS_SERVER_PATH_KOPIA}/snapshots
+              path: ${NFS_SERVER_PATH_PV}/storage/kopia/snapshots
