--- a/cluster-home/operations/media/pv.yaml
+++ b/cluster-home/operations/media/pv.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nas-media
+  name: nas-media-downloads
 spec:
-  storageClassName: nas-media
+  storageClassName: nas-media-downloads
   capacity:
     storage: 1Mi
   accessModes:
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NFS_SERVER_IP}
-    path: ${NFS_SERVER_PATH_MEDIA}
+    path: ${NFS_SERVER_PATH_MEDIA}/downloads
   mountOptions:
   - nfsvers=4
   - tcp
@@ -25,10 +25,82 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nas-media
+  name: nas-media-downloads
   namespace: media
 spec:
-  storageClassName: nas-media
+  storageClassName: nas-media-downloads
+  accessModes:
+  - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nas-media-music
+spec:
+  storageClassName: nas-media-music
+  capacity:
+    storage: 1Mi
+  accessModes:
+  - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: ${NFS_SERVER_IP}
+    path: ${NFS_SERVER_PATH_MEDIA}/music
+  mountOptions:
+  - nfsvers=4
+  - tcp
+  - intr
+  - hard
+  - noatime
+  - nodiratime
+  - nolock
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nas-media-music
+  namespace: media
+spec:
+  storageClassName: nas-media-music
+  accessModes:
+  - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nas-media-videos
+spec:
+  storageClassName: nas-media-videos
+  capacity:
+    storage: 1Mi
+  accessModes:
+  - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: ${NFS_SERVER_IP}
+    path: ${NFS_SERVER_PATH_MEDIA}/videos
+  mountOptions:
+  - nfsvers=4
+  - tcp
+  - intr
+  - hard
+  - noatime
+  - nodiratime
+  - nolock
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nas-media-videos
+  namespace: media
+spec:
+  storageClassName: nas-media-videos
   accessModes:
   - ReadWriteMany
   resources:
