--- a/cluster-home/operations/media/sabnzbd/helmrelease.yaml
+++ b/cluster-home/operations/media/sabnzbd/helmrelease.yaml
@@ -101,9 +101,8 @@ spec:
         enabled: true
         existingClaim: sabnzbd-config
       media:
-        existingClaim: nas-media
-        globalMounts:
-          - path: /media
+        enabled: true
+        existingClaim: nas-media-downloads
       incomplete:
         enabled: true
         type: emptyDir
