--- a/cluster-home/operations/media/sonarr/helmrelease.yaml
+++ b/cluster-home/operations/media/sonarr/helmrelease.yaml
@@ -88,6 +88,9 @@ spec:
       media:
         enabled: true
         existingClaim: nas-media-videos
+      downloads:
+        enabled: true
+        existingClaim: nas-media-downloads
     service:
       main:
         ports:
